<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/base"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/btnExcercise"
        android:src="@drawable/video"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/ExerciseButton"
        android:onClick="ExerciseBtnClicked" />
    
     <ImageView
        android:id="@+id/btnRunning"
        android:src="@drawable/running"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/RunningButton"
        android:onClick="RunningBtnClicked" />
     
     <ImageView
        android:id="@+id/btnWorkout"
        android:src="@drawable/handweight"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/WorkoutButton"
        android:onClick="WorkoutBtnClicked" />
          
     <ImageView
        android:id="@+id/btnWeight"
        android:src="@drawable/bathweight"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="220dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/WeightButton"
        android:onClick="WeightBtnClicked"/>

</RelativeLayout>
