<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewProgramActicity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/name_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_program_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/name_edittext_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_program_name" >
            <requestFocus />
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/desc_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/new_program_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/desc_edittext_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_program_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ok_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveProgram"
            android:text="@string/ok_button_text" />

        <Button
            android:id="@+id/cancel_buttonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelProgram"
            android:text="@string/cancel_button_text" />
    </LinearLayout>

</LinearLayout>