<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewExerciseActicivy" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/name_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_program_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/name_edittext_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="" >
            <requestFocus/>
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/sets_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_program_sets"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/sets_edittext_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:inputType="number"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/reps_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_program_reps"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/reps_edittext_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:inputType="number"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/kilo_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_program_kilo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/kilo_edittext_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:inputType="number"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ok_button_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:onClick="saveExercise"
            android:text="@string/ok_button_text" />

        <Button
            android:id="@+id/cancel_buttonId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:onClick="cancelAddExercise"
            android:text="@string/cancel_button_text" />
    </LinearLayout>

</LinearLayout>