<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
	
    	<TableLayout
        android:id="@+id/tableLayoutListItems"
		android:layout_width="fill_parent"  
    	android:layout_height="wrap_content">

	        <TableRow
	            android:id="@+id/tableRow1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content">    
				  <TextView
				       	android:id="@+id/txtviewDate"
				        android:layout_width="0dip"
				      	android:layout_weight="0.4"
				        android:layout_height="wrap_content"
				        android:textSize="20sp"
				        android:text="@string/RunningMain_Date"/>
				  <TextView
				      android:id="@+id/ListItemTxtViewDate"
				      android:layout_width="0dip"
				      android:layout_weight="0.6"
				      android:layout_height="wrap_content"
				      android:gravity="right"		
				      android:textSize="18sp"/>
	        </TableRow>
	        
   	        <TableRow
	            android:id="@+id/tableRow2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content">    
				  
   	            <TextView
				       	android:id="@+id/txtviewDistance"
				        android:layout_width="0dip"
				      	android:layout_weight="0.4"
				        android:layout_height="wrap_content"
				        android:textSize="20sp"
				        android:text="@string/RunningMain_Distance"/>
   	            
				<TextView
				        android:id="@+id/ListItemtxtViewDistance"
     				    android:layout_width="0dip"
				      	android:layout_weight="0.6"
				        android:layout_height="wrap_content"
				        android:gravity="right"
				        android:textSize="18sp"/>
	        </TableRow>
	        
        	<TableRow
	            android:id="@+id/tableRow3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content">    
				  
   	            <TextView
				       	android:id="@+id/txtviewSpeed"
				        android:layout_width="0dip"
				     	android:layout_weight="0.4"
				        android:layout_height="wrap_content"
				        android:textSize="20sp"
				        android:text="@string/RunningMain_Time"/>
   	            
			   <TextView
				        android:id="@+id/ListItemtxtViewTime"
     				    android:layout_width="0dip"
				      	android:layout_weight="0.6"
				        android:layout_height="wrap_content"
				        android:gravity="right"
				        android:textSize="18sp"/>
	        </TableRow>
	    </TableLayout>
</RelativeLayout>
